testdata/baselines/reference/submodule/compiler/jsdocTypedefBeforeParenthesizedExpression.errors.txt
test.js(13,14): error TS8010: Type annotations can only be used in TypeScript files.
test.js(14,14): error TS8010: Type annotations can only be used in TypeScript files.


==== test.js (2 errors) ====
    // @ts-check
    /** @typedef {number} NotADuplicateIdentifier */
    
    (2 * 2);
    
    /** @typedef {number} AlsoNotADuplicate */
    
    (2 * 2) + 1;
    
    
    /**
     * 
     * @param a {NotADuplicateIdentifier}
                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @param b {AlsoNotADuplicate}
                 ~~~~~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function makeSureTypedefsAreStillRecognized(a, b) {}
    